2005-05-08  David Schleef  <ds@schleef.org>

	Fixes for -wsigned-compare, default in gcc-4.0:
	* configure.ac: reenable -Werror
	* libswfdec/actions.c: (stack_pop), (stack_show),
	(stack_show_value):
	* libswfdec/jpeg/jpeg.c: (jpeg_decoder_decode_entropy_segment):
	* libswfdec/js/Makefile.am:
	* libswfdec/js/jsdtoa.c: (ulp), (b2d), (JS_strtod):
	* libswfdec/js/jsinterp.c: (js_Interpret):
	* libswfdec/js/jsstr.c: (str_split):
	* libswfdec/swfdec_actions.h:
	* libswfdec/swfdec_bits.c: (swfdec_bits_get_string):
	* libswfdec/swfdec_decoder.h:

2005-05-08  David Schleef  <ds@schleef.org>

	* configure.ac: oops, checked in a mistake.
	* libswfdec/actions_tags.c: (action_define_function_2): fix warning
	* libswfdec/swfdec_render_cairo.c: (swfdec_render_be_start),
	(swfdec_render_be_clear), (swfdec_shape_render),
	(swfdec_text_render): Update to new cairo API.
	* libswfdec/jpeg/huffman.c: (huffman_table_decode_macroblock):
	remove random printf
	* plugin/Makefile.am: Disable plugin building if gstreamer isn't
	around.

	Fixes for -wsigned-compare, default in gcc-4.0:
	* libswfdec/swfdec_decoder.h: fix endianness
	* pixbuf-loader/io-swf.c: (fill_info):
	* player/swf_play.c: (main):
	* plugin/gstappsrc.c: (gst_appsrc_loop):
	* plugin/swfdec-mozilla-player.c: (found_tags):
	* test/dump.c: (main):

2005-05-06  Eric Anholt  <anholt@FreeBSD.org>

	* libswfdec/actions.c: (action_script_call),
	(swfdec_action_script_execute), (name_object):
	* libswfdec/actions_builtin.c: (swfdec_init_context_builtins),
	(action_register_sprite_seg):
	* libswfdec/actions_tags.c: (action_call_function),
	(action_call_method):
	* libswfdec/swfdec_actions.h:
	- Add new named movieclips as members of their parent movieclip.
	- Store the root object in the actionscript context, and use that
	  instead of looking it up all the time.
	- Make name_object public (perhaps needs a better name) and make it
	  recognize _root as well.  Use it in registering movieclips as well as
	  stack_show().
